Fix broken CSS

--- a/app/assets/stylesheets/application.tailwind.css
+++ b/app/assets/stylesheets/application.tailwind.css
@@ -2,7 +2,7 @@
 @tailwind components;
 
 /* Override color of turbo progress bar */
-.}turbo-progress-bar {
+.turbo-progress-bar {
   background-color: orangered;
   height: 4px;
 }
